--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="getTweets"
+        android:title="Get Tweets"
         android:id="@+id/id_getTweets"
         android:orderInCategory="100"
         app:showAsAction="never" />
@@ -34,6 +34,12 @@
     <item
         android:title="Home"
         android:id="@+id/id_home"
+        android:orderInCategory="105"
+        app:showAsAction="never" />
+
+    <item
+        android:title="Price Graphs"
+        android:id="@+id/id_graph"
         android:orderInCategory="105"
         app:showAsAction="never" />
 </menu>
