--- a/app/src/main/res/layout/content_account_settings.xml
+++ b/app/src/main/res/layout/content_account_settings.xml
@@ -119,12 +119,12 @@
         android:layout_height="36dp"
         android:layout_marginBottom="14dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginTop="114dp"
         android:onClick="updatec1"
         android:text="Change"
         app:layout_constraintBottom_toTopOf="@+id/updatec2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Crypto1" />
+        app:layout_constraintTop_toBottomOf="@+id/NewPass" />
 
     <TextView
         android:id="@+id/textView26"
@@ -163,10 +163,12 @@
         android:layout_width="123dp"
         android:layout_height="30dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="33dp"
         android:entries="@array/CryptocurrencyChoice1"
         app:layout_constraintBottom_toTopOf="@+id/Crypto2"
+        app:layout_constraintEnd_toStartOf="@+id/updatec1"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/Updatepass" />
 
